[gd_scene load_steps=2 format=3 uid="uid://d37n2k2286kfp"]

[ext_resource type="Script" path="res://state_machine/nodes/left_menu/state_space_container.gd" id="1_txj4w"]

[node name="StateSpaceContainer" type="PanelContainer"]
script = ExtResource("1_txj4w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "State Name"

[node name="TriggerAnimButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Triggers Anim"

[node name="AnimOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/AnimOption"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
text = "Anim name = State"

[node name="AnimNameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/AnimOption"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="UseAnimButton" type="CheckButton" parent="MarginContainer/VBoxContainer/AnimOption"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/NameEdit" to="." method="_on_name_edit"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TriggerAnimButton" to="." method="_on_trigger_anim_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/AnimOption/UseAnimButton" to="." method="_on_use_anim_button_toggled"]
